--- a/app/index.html
+++ b/app/index.html
@@ -5,14 +5,14 @@
 
 	<meta charset="utf-8">
 
-	<title>Title</title>
-	<meta name="description" content="">
+	<title>TM nails studio</title>
+	<meta name="description" content="nails studio">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<meta property="og:image" content="path/to/image.jpg">
-	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="img/favicon/apple-touch-icon-114x114.png" type="image/x-icon">
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
@@ -451,7 +451,6 @@
     	 									<img src="img/logo_png_2.png" alt="footer-logo">
     	 									<p>Студія нігтьового сервісу<br>
     	 									 преміум-классу</p>
-    	 								</div>
     	 								<div class="social-footer">
 		    	 							<nav class="social">
 													<ul>
@@ -460,6 +459,7 @@
 														<li><a href="#"><i class="fab fa-telegram-plane"></i></a></li>
 													</ul>
 												</nav>
+    	 								</div>
     	 								</div>
 
     	 							</div>
@@ -487,7 +487,15 @@
 												<p><i class="far fa-clock"></i>Час роботи: кожного дня: 09:00 - 18:00</p>
     	 								</div>
     	 							</div>
-    	 							<div class="col-lg-4 col-sm-6"></div>
+    	 							<div class="col-lg-4 col-sm-6">
+    	 								
+										<div class="map">
+											
+											<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1560.7215807492314!2d29.53142986953593!3d47.75650332574814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40cc20272bca4431%3A0x59ce48cf50a471ee!2z0LLRg9C70LjRhtGPIDgg0JHQtdGA0LXQt9C90Y8sIDQx!5e0!3m2!1sru!2sua!4v1554886455182!5m2!1sru!2sua" width="100%" height="200px" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+										</div>
+
+    	 							</div>
 
     	 					</div>
     	 				</div>
